<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".NuevoRecibo"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cliente"
                android:fontFamily="sans-serif-black"
                />

            <EditText
                android:id="@+id/txtNombre_Cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nombre_cliente"
                />

            <EditText
                android:id="@+id/txtApellido_Cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/apellido_cliente"
                />

            <EditText
                android:id="@+id/txtCedula_Cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/cedula_cliente"
                android:layout_marginBottom="10sp"
                />

            <TextView
                android:id="@+id/txtcliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Emisor"
                android:fontFamily="sans-serif-black"
                />

            <EditText
                android:id="@+id/txtRazon_Emisor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/razonSocial_emisor"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/txtNRIF_Emisor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/N_RIF"
                    android:layout_marginBottom="10sp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txtproducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Producto"
                android:fontFamily="sans-serif-black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/txtCodigo_Producto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="9"
                    android:hint="@string/codigo_producto"
                    />

                <EditText
                    android:id="@+id/txtDescripcion_Producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/descripcion_producto"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/txtPrecio_Producto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="9"
                    android:inputType="numberDecimal"
                    android:hint="@string/precio_producto"
                    />

                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/cantidad"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btnrealizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_agregarItems"
                android:layout_marginHorizontal="15sp"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listaItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="Subtotal:"
                    android:textSize="14sp"
                    />

                <EditText
                    android:id="@+id/txtSubtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="14sp"
                    android:text="0.00"
                    android:inputType="text"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_Totalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Terminar Compra"
                android:layout_marginHorizontal="15sp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>